[tool.poetry]
name = "hw07-web"
version = "0.1.0"
description = "SQLAlchemy study home work."
authors = ["Dishalex <dishalex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw07_web"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
psycopg = "^3.1.12"
faker = "^19.11.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
